--- a/home.html
+++ b/home.html
@@ -11,6 +11,9 @@
     <!-- <script src="./20.js"></script> -->
 
     <!-- 150. 逆波兰表达式求值 -->
-    <script src="./150.js"></script>
+    <!-- <script src="./150.js"></script> -->
+
+    <!-- 1. 两数之和 -->
+    <script src="./1.js"></script>
 </body>
 </html>
